# osmand-live-track-web

./: .dockerignore  .gitignore  Cargo.toml  README.md  dockerfile
src/: main.rs
static/: index.html
