[package]
name = "live-track"
version = "0.1.0"
authors = ["Isaac Wismer <isaac@iwismer.ca>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
actix-files = "0.5.0"
env_logger = "0.9.0"
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
once_cell = "1.8.0"
serde = "1.0.126"
# 0.4.2 is required for use with actix 3
sqlx = { version = "0.4.2", features = [ "runtime-actix-native-tls", "sqlite" ] }
